--- a/src/styling/blocks/Hero.css
+++ b/src/styling/blocks/Hero.css
@@ -32,6 +32,7 @@
   margin-top: 0%;
   font-size: 2500%;
   color: hsla(0, 0%, 100%, 0.5);
+  user-select: none;
 }
 .Hero-header-h3 {
   margin-top: -30%;
