--- a/src/styling/Navbar.css
+++ b/src/styling/Navbar.css
@@ -1,6 +1,6 @@
 /* NavBar Section Styling */
 
-.NavBarDiv {
+.NavBar {
   width: 100%;
   top: 0;
   background-color: rgba(169, 234, 238, 0.5);
@@ -21,4 +21,51 @@
 .nav-link {
   text-decoration: none;
   color: #000000;
+  position: relative;
+}
+.nav-link:hover {
+  color: #f36bca;
+}
+
+.NavBarDiv {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.NavBarLeft a {
+  text-decoration: none;
+}
+
+.NavBarRight {
+  display: flex;
+  gap: 20px;
+  margin-right: 0;
+}
+
+/* Shower Container */
+.shower-container {
+  position: absolute;
+  top: 0.5%;
+  bottom: 400px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+/* Shower Symbols */
+.shower-symbol {
+  position: absolute;
+  font-size: 1.5rem;
+  font-weight: bold;
+  opacity: 0.8;
+  transform: translateY(50px);
+}
+
+/* Nav Link Styling */
+.nav-link:hover .nav-label {
+  opacity: 1;
+  transform: translateY(0);
 }
